# Beat-Game

./: CMakeLists.txt  Rhythm.sln  Rhythm.vcxproj  Rhythm.vcxproj.filters
include/glad/: glad.h
source/: main.cpp
source/Math/: vec.h
source/shaders/: circle_default.Vert  circle_default.frag
src/: CustomText.cpp  CustomText.h  DeltaTime.hpp  Input.hpp  Mesh.hpp  UI.h  UniformLayouts.hpp  VertexShaderLayouts.h  Window.cpp  Window.h  Window.hpp  glad.c  main.cpp  ui.cpp
src/Math/: mat.h  vec.h
src/shaders/: Ring.frag  Ring.vert  default.frag  default.vert
src/shaders/frag/: s1.frag  text.frag  ui.frag
src/shaders/vert/: ShaderToy_bg.vert  ShaderToy_ui.vert  shader_ui.vert  text.vert
